input.css
@import "tailwindcss";

/* Toplevel Stuff */

html {
    @apply bg-neutral-50 dark:bg-black text-black dark:text-white overscroll-none select-none;
}

html, body {
    @apply w-dvw overflow-hidden; /* h-dvh */
    height: var(--app-height)
}

.full-screen {
    @apply w-dvw; /* h-dvh */
    height: var(--app-height)
}

/* Main Header/Subtitle & Header Bar */

.main-header {
    @apply text-blue-500 font-bold text-center text-lg;
}

.main-subtitle {
    @apply text-neutral-700 dark:text-neutral-200 italic text-center text-sm;
}

.commit-info {
    @apply text-neutral-400 dark:text-neutral-600 italic text-center text-xs;
}

.headerbar {
    @apply text-black dark:text-white;
}

/* Containers */

.toplevel-container {
    @apply flex flex-col w-full h-full px-4 items-center;
}

.scroll-container {
    @apply overflow-y-auto overscroll-auto;
}

.constrain-x {
    @apply grow w-full max-w-xl;
}

.container-alt {
    @apply bg-neutral-300 dark:bg-neutral-900 rounded-2xl px-2 py-6;
}

.container-reminder-list {
    @apply
    flex flex-col
    w-full
    items-center
    pb-16
}

.container-reminder-input {
    @apply
    flex
    justify-center
    absolute bottom-4 left-4 right-4
    h-12;
}

.container-reminder-input-inner {
    @apply
    flex flex-row
    h-full w-full
    max-w-xl
    backdrop-blur-sm
    shadow-2xl
    rounded-full
    bg-neutral-300/50 dark:bg-neutral-800/50;
}

/* Buttons */

.btn {
    @apply
    bg-neutral-700 hover:bg-neutral-500 active:bg-neutral-800 disabled:bg-neutral-800 /* Background colors */
    text-white disabled:text-neutral-500 /* Text colors */
    border-none /* No Border by default */
    py-2 px-4 /* Padding */
    rounded /* Rounding */
    transition-all duration-150 /* Transitions */
    touch-manipulation; /* Touch Manipulation */
}

.btn-blue {
    @apply
    bg-blue-500 text-white font-bold
    hover:bg-blue-700
    active:bg-blue-700
    disabled:bg-blue-500 disabled:text-white
    disabled:opacity-50 disabled:cursor-not-allowed;
}

.btn-red {
    @apply
    bg-red-500 text-white font-bold
    hover:bg-red-700
    active:bg-red-700
    disabled:bg-red-500 disabled:text-white
    disabled:opacity-50 disabled:cursor-not-allowed;
}

.btn-circle {
    @apply rounded-full aspect-square;
}

.remove-button {
    @apply aspect-square self-center shrink border-none cursor-pointer text-black dark:text-white rounded-full bg-transparent hover:bg-red-200 active:bg-red-400 dark:bg-transparent dark:hover:bg-red-500 dark:active:bg-red-700 transition-all duration-75 touch-manipulation font-mono;
}

.add-button {
    @apply border-solid rounded-full font-mono border-2 border-neutral-300 disabled:border-neutral-800;
}

/* Text Inputs */

.text-input {
    @apply
    appearance-none
    bg-neutral-200 dark:bg-neutral-800
    border-2 border-neutral-200 dark:border-neutral-800 rounded
    w-full py-2 px-4
    text-neutral-700 dark:text-neutral-300 leading-tight
    focus:outline-none focus:bg-white dark:focus:bg-black focus:border-blue-500;
}

.standard-input {
    @apply px-4 py-1 rounded-md transition-all focus:outline-none;
}

.reminder-input {
    @apply
    appearance-none
    bg-transparent
    focus:outline-none
}

.new-reminder-input {
    @apply
    appearance-none
    bg-transparent
    border-none
    w-full py-2 px-4
    text-neutral-700 dark:text-neutral-300 leading-tight
    focus:outline-none transition-all duration-150;
}

.functionally-hidden-x {
    @apply
    opacity-0
    max-w-0
    px-0
    mx-0
}

.functionally-hidden-y {
    @apply
    opacity-0
    max-h-0
    py-0
    my-0
}

